--- a/src/style.css
+++ b/src/style.css
@@ -109,10 +109,10 @@ a:hover {
   position: relative;
   min-height: 100vh;
   padding-top: 160px;
-  background-image: url('https://pbs.twimg.com/profile_images/1948132896847392768/tIH5I-Z4.jpg');
+  background-image: url('ssstech.png');
   background-size: cover;
   background-position: center;
-  filter: grayscale(100%);
+  filter: grayscale(100%); 
   display: flex;
   align-items: center;
   justify-content: center;
@@ -120,13 +120,17 @@ a:hover {
 }
 
 .hero-overlay {
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.35);
   width: 100%;
   height: 100%;
   padding: 2rem 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 
 .hero-content {
